# wasm-vk

./: .gitignore  Cargo.toml  README.md  fix_wat.py  tmp.wat
examples/: comp.wasm  comp.wat  image.rs  image.wat  vulkano.rs
src/: am.rs  ir.rs  lib.rs  main.rs  spirv.rs  sr.rs  vm.rs
tests/: call.wat  fib.wat  memory.wat  one.wat  runner.rs  rust.wat  two_buffers.rs  two_buffers.wat  typed_if.wat
